--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.0",
     "concurrently": "^8.0.1",
